# Meme-Lord

./: .gitignore  LICENSE  main.py  pyproject.toml  start.sh
cogs/: about.py  meme.py
core/: MemeBot.py  _info.py
core/images/: memes.py
core/videos/: memes.py
