[tool.poetry]
name = "meme-lord"
version = "0.1.0"
description = ""
authors = ["Nemika <nemika@bytestobits.dev>"]
readme = "README.md"
packages = [{include = "meme_lord"}]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.8.1"
requests = "^2.31.0"
pillow = "^9.5.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
